cmake_minimum_required(VERSION 2.8.12)
project(hw10-1)
set(FIRST class_function)
set(SECOND dynamic_cast)
set(THIRD shapes)
add_library(LIB_${FIRST} ${FIRST}.cc)
add_executable(${FIRST} ${FIRST}_main.cc)
target_link_libraries(${FIRST} LIB_${FIRST})
add_executable(cast_quiz cast_quiz.cc)
add_library(LIB_${SECOND} ${SECOND}.cc)
add_executable(${SECOND} ${SECOND}_main.cc)
target_link_libraries(${SECOND} LIB_${SECOND})
add_library(LIB_${THIRD} ${THIRD}.cc)
add_executable(${THIRD} ${THIRD}_main.cc)
target_link_libraries(${THIRD} LIB_${THIRD})