cmake_minimum_required(VERSION 2.8.12)
project(hw11-1)
set (CMAKE_CXX_STANDARD 14)
set(FIRST MyVector)
set(SECOND string)
add_library(LIB_${FIRST} ${FIRST}.cc)
add_executable(${FIRST} ${FIRST}_main.cc)
target_link_libraries(${FIRST} LIB_${FIRST})
add_library(LIB_${SECOND} ${SECOND}.cc)
add_executable(${SECOND} ${SECOND}_main.cc)
target_link_libraries(${SECOND} LIB_${SECOND})