cmake_minimum_required(VERSION 2.8.12)
project(hw9-1)
set(FIRST classes)
set(SECOND print_info)
set(THIRD print_member)
add_library(LIB_${FIRST} ${FIRST}.cc)
add_executable(${FIRST} ${FIRST}_main.cc)
target_link_libraries(${FIRST} LIB_${FIRST})
add_library(LIB_${SECOND} ${SECOND}.cc)
add_executable(${SECOND} ${SECOND}_main.cc)
target_link_libraries(${SECOND} LIB_${SECOND})
add_library(LIB_${THIRD} ${THIRD}.cc)
add_executable(${THIRD} ${THIRD}_main.cc)
target_link_libraries(${THIRD} LIB_${THIRD})